fix: Fix inline code blocks in dark mode

--- a/assets/css/core/theme-vars.css
+++ b/assets/css/core/theme-vars.css
@@ -116,4 +116,7 @@
 }
 
 
-
+code {
+  background-color: var(--antiflash-white);
+  color: var(--bistre);
+}
